--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore'
     implementation 'com.google.android.gms:play-services-safetynet:18.0.1'
     implementation 'com.google.firebase:firebase-database:20.1.0'
+    implementation 'com.google.firebase:firebase-ml-modeldownloader'
     implementation 'com.google.android.gms:play-services-auth:20.3.0'
     implementation 'com.squareup.picasso:picasso:2.8'
 
